--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:ci": "npm run lint && npm run unit -- --cov --coverage-report=lcovonly && npm run test:typescript",
     "test:report": "npm run lint && npm run unit:report && npm run test:typescript",
     "test:typescript": "tsd",
-    "unit": "tap -J test/*.test.js test/*/*.test.js",
+    "unit": "tap --node-arg=--require=/home/drasync/ProfilingPromisesAnalysis/asyncHooks_require.js -J test/*.test.js test/*/*.test.js",
     "unit:junit": "tap-mocha-reporter xunit < out.tap > test/junit-testresults.xml",
     "unit:report": "tap -J test/*.test.js test/*/*.test.js --cov --coverage-report=html --coverage-report=cobertura | tee out.tap"
   },
